--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,5 @@ chromadb==0.4.14
 sentence-transformers==2.2.2
 unstructured[pdf]==0.10.16
 PyMuPDF==1.22.3
-transformers==4.41.1
-torch>=2.1.0
-accelerate
+google-generativeai==0.3.2
+python-dotenv==1.0.1
